--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "brotli",
-  "version": "1.3.3",
-  "description": "A port of the Brotli compression algorithm as used in WOFF2",
+  "name": "brotli-dictionary",
+  "version": "1.4.0",
+  "description": "WASM version of brotli compression algorithm with dictionary support",
   "main": "index.js",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/devongovett/brotli.js.git"
+    "url": "https://github.com/heymdall-legal/brotli.js"
   },
   "keywords": [
     "compress",
-    "decompress",
-    "encode",
-    "decode"
+    "encode"
   ],
   "author": "Devon Govett <devongovett@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/devongovett/brotli.js/issues"
+    "url": "https://github.com/heymdall-legal/brotli.js/issues"
   },
-  "homepage": "https://github.com/devongovett/brotli.js",
-  "dependencies": {
-    "base64-js": "^1.1.2"
-  },
+  "homepage": "https://github.com/heymdall-legal/brotli.js",
   "devDependencies": {
     "mocha": "^2.2.1"
-  },
-  "browser": {
-    "./dec/dictionary-data.js": "./dec/dictionary-browser.js"
   },
   "scripts": {
     "test": "mocha",
